--- a/public/css/main.css
+++ b/public/css/main.css
@@ -145,6 +145,7 @@ h4, .h4 {
 
 h5, .h5 {
   font-size: 1.25rem;
+  text-transform: capitalize;
 }
 
 h6, .h6 {
@@ -595,7 +596,7 @@ progress {
   max-width: 100%;
   height: auto;
   display: block;
-  width: 50%;
+  width: 25%;
   margin-left: auto;
   margin-right: auto;
 }
