--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -5,11 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="http://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet" />
-
     <!-- Bootstrap CSS -->
     <link href="./css/main.css" rel="stylesheet" />
-
-    <title>Hello, world!</title>
+    <title>Pokedex API</title>
   </head>
 
   <body>
